--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "1.0.1-alpha",
   "type": "module",
-  "name": "@var3n1k/eestec-telegram-bot",
+  "name": "eestec-telegram-bot",
   "description": "eestec telegram bot description",
 
   "keywords": [
@@ -26,7 +26,7 @@
   "homepage": "https://url.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/var3n1k/ProjectManager"
+    "url": "https://github.com/tuffii/EESTEC_tgBot"
   },
   "funding": [
     {
