--- a/TGBot/package.json
+++ b/TGBot/package.json
@@ -1,7 +1,7 @@
 {
-  "version": "1.0.1-alpha",
+  "version": "1.0.2-alpha",
   "type": "module",
-  "name": "eestec-telegram-bot",
+  "name": "@var3n1k/eestec-telegram-bot",
   "description": "eestec telegram bot description",
 
   "keywords": [
@@ -26,7 +26,7 @@
   "homepage": "https://url.com",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tuffii/EESTEC_tgBot"
+    "url": "https://github.com/var3n1k/EESTEC-TelegramBot"
   },
   "funding": [
     {
@@ -41,6 +41,8 @@
 
   "main": "./src/index.ts",
   "module": "./src/index.ts",
+
+  "proxy": "http://localhost:5000",
 
   "types": "./types/index.d.ts",
   "typings": "./types/index.d.ts",
@@ -124,7 +126,7 @@
   },
 
   "dependencies": {
-    "@var3n1k/project-manager": "1.0.2-alpha-1"
+    "@var3n1k/project-manager": "1.0.5-alpha"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
