--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
   },
 
   "dependencies": {
-    "@var3n1k/core": "^1.1.1-alpha"
+    "@var3n1k/server-core": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "^18.11.18",
